Bug 440093 - [Crash] Animation Curves: Adding opacity key.
Summary: [Crash] Animation Curves: Adding opacity key.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: Emmet O'Neill
URL:
Keywords: release_blocker
Depends on:
Blocks:
 
Reported: 2021-07-21 03:01 UTC by Emmet O'Neill
Modified: 2021-07-23 21:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Emmet O'Neill 2021-07-21 03:01:28 UTC
Just taking a personal note of a regression crash that popped up tonight with opacity keys in the curves docker. 

Backtrace:

efd22 in raise () from /usr/lib/libc.so.6
#1  0x00007ffff1cd9862 in abort () from /usr/lib/libc.so.6
#2  0x00007ffff22a7910 in QMessageLogger::fatal(char const*, ...) const () from /usr/lib/libQt5Core.so.5
#3  0x00007ffff22a6cf5 in qt_assert(char const*, char const*, int) () from /usr/lib/libQt5Core.so.5
#4  0x00007ffff58178fc in KisKeyframeChannel::currentTime() const [clone .cold] () at /usr/include/c++/11.1.0/bits/atomic_base.h:385
#5  0x00007ffff5902197 in KisScalarKeyframeChannel::currentValue (this=0x5555582bc950) at /home/eoin/Source/krita/src/libs/image/kis_scalar_keyframe_channel.h:138
#6  KisAnimatedOpacityProperty::get (this=0x555562da2e68) at /home/eoin/Source/krita/src/libs/image/KisAnimatedOpacityProperty.cpp:23
#7  0x00007ffff59eb9cd in KisBaseNode::opacity (this=<optimized out>) at /home/eoin/Source/krita/src/libs/image/kis_base_node.cpp:114
#8  0x00007ffff5aff6de in KisProjectionLeaf::opacity (this=0x555562f45ae0) at /home/eoin/Source/krita/src/libs/image/kis_projection_leaf.cpp:296
#9  0x00007ffff5addb23 in KisLayerProjectionPlane::applyImpl (this=<optimized out>, painter=<optimized out>, rect=..., maxOutAlpha=<optimized out>)
    at /usr/include/qt/QtCore/qsharedpointer_impl.h:301
#10 0x00007ffff5a666b8 in KisAsyncMerger::compositeWithProjection (rect=..., leaf=..., this=0x7fff3c83bb30)
    at /home/eoin/Source/krita/src/libs/image/kis_async_merger.cpp:358
#11 KisAsyncMerger::startMerge (this=0x7fff3c83bb30, walker=..., notifyClones=<optimized out>) at /home/eoin/Source/krita/src/libs/image/kis_async_merger.cpp:282
#12 0x00007ffff5ad04fc in KisRegenerateFrameStrokeStrategy::doStrokeCallback (this=<optimized out>, data=<optimized out>)
    at /home/eoin/Source/krita/src/libs/global/kis_shared_ptr.h:158
#13 0x00007ffff58a6d10 in KisStrokeJob::run (this=<optimized out>)
    at /home/eoin/Source/krita/build/libs/image/kritaimage_autogen/EWIEGA46WW/../../../../../src/libs/image/kis_stroke_job.h:32
#14 KisUpdateJobItem::run (this=0x555562c54160)
    at /home/eoin/Source/krita/build/libs/image/kritaimage_autogen/EWIEGA46WW/../../../../../src/libs/image/kis_update_job_item.h:90
#15 0x00007ffff22e82f2 in ?? () from /usr/lib/libQt5Core.so.5
#16 0x00007ffff22e4fef in ?? () from /usr/lib/libQt5Core.so.5
#17 0x00007ffff1e8a259 in start_thread () from /usr/lib/libpthread.so.0
#18 0x00007ffff1db15e3 in clone () from /usr/lib/libc.so.6
Comment 1 Emmet O'Neill 2021-07-23 21:15:54 UTC
Git commit e95d40ec57869ecaa5524109bdcf29d69ff6fab7 by Emmet O'Neill.
Committed on 23/07/2021 at 21:15.
Pushed by emmetoneill into branch 'master'.

Fix crash caused by threading issues.

Opacity properties were not being copied properly,
resulting in a crash occasionally when adding and
removing keyframes.

M  +2    -1    libs/image/KisAnimatedOpacityProperty.cpp
M  +1    -1    libs/image/KisAnimatedOpacityProperty.h
M  +1    -1    libs/image/kis_base_node.cpp
M  +3    -3    libs/image/kis_default_bounds_node_wrapper.cpp
M  +1    -1    libs/image/kis_default_bounds_node_wrapper.h

https://invent.kde.org/graphics/krita/commit/e95d40ec57869ecaa5524109bdcf29d69ff6fab7