Fix crash caused by threading issues.

Opacity properties were not being copied properly,
resulting in a crash occasionally when adding and
removing keyframes.

BUG:440093